--- a/NEWS
+++ b/NEWS
@@ -26,7 +26,10 @@ Version 0.23 - September 2024
   - Tcl: With the forthcoming Tcl 9.0, characters outside the Unicode BMP
     in Tcl message catalogs (.msg files) will work regardless of the locale's
     encoding.
-  - Perl: xgettext now reports warnings instead of fatal errors.
+  - Perl:
+    o xgettext now reports warnings instead of fatal errors.
+    o Strings with embedded expressions (a.k.a. interpolated strings) are now
+      recognized.
   - PHP: Strings with embedded expressions are now recognized.
 
 * Runtime behaviour:
