xgettext: PHP: Support heredoc and nowdoc strings.
Reported:
by Bodo Graumann <mail@bodograumann.de> at <https://savannah.gnu.org/bugs/?27740>,
at <https://savannah.gnu.org/bugs/?35944>,
by Cédric Anne <canne@teclib.com> at <https://savannah.gnu.org/bugs/?62158>.

* gettext-tools/src/x-php.c (TAB_WIDTH): New macro.
(process_heredoc): New function.
(phase4_get): Process the heredoc or nowdoc string, instead of blindly skipping
it.
* gettext-tools/tests/xgettext-php-1: Add tests of heredoc strings with embedded
expressions.
* gettext-tools/tests/xgettext-php-2: Expect spaces before a heredoc end label
to be eaten. Add tests of heredoc strings and nowdoc strings.
* NEWS: Mention the improvement.

--- a/NEWS
+++ b/NEWS
@@ -30,7 +30,9 @@ Version 0.23 - September 2024
     o xgettext now reports warnings instead of fatal errors.
     o Strings with embedded expressions (a.k.a. interpolated strings) are now
       recognized.
-  - PHP: Strings with embedded expressions are now recognized.
+  - PHP:
+    o Strings with embedded expressions are now recognized.
+    o Heredoc and Nowdoc strings are now scanned correctly.
 
 * Runtime behaviour:
   - In the C.UTF-8 locale, like in the C locale, the *gettext() functions
