--- a/NEWS
+++ b/NEWS
@@ -33,6 +33,8 @@ Version 0.23 - September 2024
   - PHP:
     o Strings with embedded expressions are now recognized.
     o Heredoc and Nowdoc strings are now scanned correctly.
+    o The format string directives %E, %F, %g, %G, %h, %H are now regarded as
+      valid.
 
 * Runtime behaviour:
   - In the C.UTF-8 locale, like in the C locale, the *gettext() functions
