--- a/gettext-tools/doc/lang-php.texi
+++ b/gettext-tools/doc/lang-php.texi
@@ -1,5 +1,5 @@
 @c This file is part of the GNU gettext manual.
-@c Copyright (C) 1995-2020 Free Software Foundation, Inc.
+@c Copyright (C) 1995-2024 Free Software Foundation, Inc.
 @c See the file gettext.texi for copying conditions.
 
 @node PHP
@@ -8,7 +8,7 @@
 
 @table @asis
 @item RPMs
-mod_php4, mod_php4-core, phpdoc
+php
 
 @item Ubuntu packages
 php
@@ -17,14 +17,15 @@ php
 @code{php}, @code{php3}, @code{php4}
 
 @item String syntax
-@code{"abc"}, @code{'abc'}
+@code{"abc"}, @code{'abc'},
+@code{<<<EOT}, @code{<<<"EOT"}, @code{<<<'EOT'}
 
 @item gettext shorthand
 @code{_("abc")}
 
 @item gettext/ngettext functions
-@code{gettext}, @code{dgettext}, @code{dcgettext}; starting with PHP 4.2.0
-also @code{ngettext}, @code{dngettext}, @code{dcngettext}
+@code{gettext}, @code{dgettext}, @code{dcgettext},
+@code{ngettext}, @code{dngettext}, @code{dcngettext}
 
 @item textdomain
 @code{textdomain} function
@@ -40,6 +41,9 @@ Programmer must call @code{setlocale (LC_ALL, "")}
 
 @item Use or emulate GNU gettext
 use
+@c There is also an alternative package named 'php-gettext'
+@c <https://bugs.launchpad.net/php-gettext>, but we better not mention it
+@c since it has a critical security vulnerability open since 2016.
 
 @item Extractor
 @code{xgettext}
