--- a/NEWS
+++ b/NEWS
@@ -16,7 +16,10 @@ Version 0.23 - September 2024
     o xgettext now recognizes comments of the form '#; <expression>'.
   - Java: Improved recognition of format strings when the String.formatted
     method is used.
-  - JavaScript: xgettext now parses template literals inside JSX correctly.
+  - JavaScript:
+    o xgettext now parses template literals inside JSX correctly.
+    o xgettext has a new option --tag that customizes the behaviour of tagged
+      template literals.
   - C#: Strings with embedded expressions (a.k.a. interpolated strings) are now
     recognized.
   - awk: String concatenation by juxtaposition is now recognized.
