Provide XML schemas for .its and .loc files.
Suggested by Martin Blanchard <tchaik@gmx.com>
at <https://savannah.gnu.org/bugs/?56519>.

* gettext-tools/src/its.xsd: New file, reverse-engineered from its.c.
* gettext-tools/src/its-extensions.xsd: New file, reverse-engineered from its.c.
* gettext-tools/src/locating-rules.xsd: New file, reverse-engineered from
locating-rules.c.
* gettext-tools/src/Makefile.am (schemadir): New variable.
(schema_DATA): New variable.
(EXTRA_DIST): Distribute all of schema_DATA.
* gettext-tools/configure.ac: Check for xmllint, and set XMLLINT.
* gettext-tools/its/Makefile.am (ITS_FILES, LOC_FILES): New variables.
(dist_its_DATA): Rewrite.
(check-local): New rule.
* gettext-tools/doc/gettext.texi (Preparing ITS Rules): Split into two
subsections. Mention which schema the files have to obey.
* HACKING: Mention xmllint as maintainer prerequisite.
* PACKAGING: Mention the $prefix/share/gettext/schema/ directory.
* NEWS: Mention the change.

--- a/HACKING
+++ b/HACKING
@@ -141,6 +141,13 @@ Additional requirements for maintainers
 If you are a maintainer, you will want to minimize the number of tests that
 are skipped. To this effect, you need to install also:
 
+  * The xmllint program
+    + Homepage: https://gitlab.gnome.org/GNOME/libxml2/-/wikis/home
+    + Pre-built package name:
+      - On Debian and Debian-based systems: libxml2-utils,
+      - On Red Hat distributions: libxml2.
+      - Other: https://repology.org/project/libxml2/versions
+
   * A C++ compiler
     + Homepage: https://gcc.gnu.org/
     + Pre-built package name:
