doc: Mention some related packages.
* gettext-tools/doc/gettext.texi (OmegaT, Virtaal, Vim): New sections.
(Other tools): Mention the Translate Toolkit.
* gettext-tools/doc/lang-python.texi: Mention Babel.

--- a/gettext-tools/doc/lang-python.texi
+++ b/gettext-tools/doc/lang-python.texi
@@ -109,3 +109,8 @@ _(f"The file @{file[i]@} does not exist.")
 @noindent
 because the translator is generally not a programmer and should thus not be
 confronted with expressions from the programming language.
+
+@subheading Related software
+
+An internationalization system based on GNU gettext and PO files is
+@url{https://babel.pocoo.org/, Babel}.
