msgfmt: New option --replace-text.
Reported by Asterix <asterix@lagaule.org>
at <https://savannah.gnu.org/bugs/?52159>.

* gettext-tools/src/its.h (its_merge_context_merge): Add parameter replace_text.
* gettext-tools/src/its.c (its_merge_context_merge_node): Add parameter
replace_text.
(its_merge_context_merge): Likewise.
* gettext-tools/src/write-xml.h (msgdomain_write_xml, msgdomain_write_xml_bulk):
Add parameter replace_text.
* gettext-tools/src/write-xml.c (msgdomain_write_xml_bulk): Add parameter
replace_text.
(msgdomain_write_xml): Likewise.
* gettext-tools/src/msgfmt.c (xml_replace_text): New variable.
(long_options): Add --replace-text.
(main): Handle --replace-text.
(usage): Document option --replace-text.
* gettext-tools/tests/msgfmt-xml-4: New file, based on
gettext-tools/tests/msgfmt-xml-1.
* gettext-tools/tests/Makefile.am (TESTS): Add it.
* gettext-tools/doc/msgfmt.texi: Document option --replace-text.
* NEWS: Mention the change.

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Version 0.23 - September 2024
+Version 0.23 - October 2024
 
 * Programming languages support:
   - XML:
@@ -14,6 +14,8 @@ Version 0.23 - September 2024
     o XML schemas for .its and .loc files are now provided.
     o The value of the xml:lang attribute, inserted by msgfmt, now conforms
       to W3C standards.
+    o 'msgfmt --xml' accept an option --replace-text, that causes the output
+      to be a mono-lingual XML file instead of a multi-lingual XML file.
   - Python:
     o xgettext now assumes source code for Python 3 rather than Python 2.
       This affects the interpretation of escape sequences in string literals.
