C#: Add support for dotnet.
Reported by Michele Locati <mlocati@gmail.com>
at <https://savannah.gnu.org/bugs/index.php?66292>.

* DEPENDENCIES: Mention dotnet as an alternative to Mono.
* NEWS: Mention the change.
* PACKAGING: Mention the new file $prefix/lib/gettext/GNU.Gettext.dll.
* gettext-runtime/intl-csharp/Makefile.am (pkglibdir): New variable.
(CLEANFILES): Add GNU.Gettext.pdb.
(install-dll-no, install-dll-yes): Install also into $(pkglibdir).
(installdirs-dll, uninstall-dll): Update accordingly.
* gettext-runtime/intl-csharp/intl.cs (GettextResourceSet): Add field Table.
Override GetEnumerator, GetObject to handle it. Change the Keys method to handle
it as well.
* gettext-tools/tests/lang-csharp: In the program, on Windows, produce UTF-8
output with Unix end-of-lines and set the culture manually.

--- a/NEWS
+++ b/NEWS
@@ -35,8 +35,12 @@ Version 0.23 - October 2024
     o xgettext now parses template literals inside JSX correctly.
     o xgettext has a new option --tag that customizes the behaviour of tagged
       template literals.
-  - C#: Strings with embedded expressions (a.k.a. interpolated strings) are now
-    recognized.
+  - C#:
+    o The build system and tools now also support 'dotnet' (.NET) as C#
+      implementation.  In order to declare a preference for 'dotnet' over
+      'mono', you can use the configure option '--enable-csharp=dotnet'.
+    o Strings with embedded expressions (a.k.a. interpolated strings) are now
+      recognized.
   - awk: String concatenation by juxtaposition is now recognized.
   - Smalltalk: The string concatenation operator ',' is now recognized.
   - Vala: Improved recognition of format strings when the string.printf method
