xgettext: Desktop: Correct the line numbers in the output and in error messages.
* gettext-tools/src/read-desktop.c (struct token_ty): Add a 'lineno' field.
(desktop_lex): Correct the line numbers in error messages. For a token of type
token_type_pair, store the line number.
(desktop_parse): Pass the line number from the token to
desktop_reader_handle_pair.
* gettext-tools/tests/xgettext-desktop-1: Update expected output.
* gettext-tools/tests/xgettext-desktop-2: Likewise.
* NEWS: Mention the change.

--- a/NEWS
+++ b/NEWS
@@ -59,6 +59,7 @@ Version 0.23 - October 2024
     o Heredoc and Nowdoc strings are now scanned correctly.
     o The format string directives %E, %F, %g, %G, %h, %H are now regarded as
       valid.
+  - Desktop: xgettext now produces POT files with correct line numbers.
 
 * Runtime behaviour:
   - In the C.UTF-8 locale, like in the C locale, the *gettext() functions
