libgettextpo: Extend the function po_message_set_format.
Reported by Alexander Potashev <aspotashev@gmail.com>
at <https://savannah.gnu.org/bugs/?61160>.

* gettext-tools/libgettextpo/gettext-po.c (po_message_set_format): Support a
negative value.
* gettext-tools/libgettextpo/gettext-po.in.h (po_message_set_format): Mention
effects of po_message_set_format (..., -1).
* gettext-tools/doc/gettext.texi (po_message_t API): Likewise.
* NEWS: Mention the change.

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Version 0.23 - October 2024
+Version 0.23 - November 2024
 
 * Programming languages support:
   - XML:
@@ -79,6 +79,8 @@ Version 0.23 - October 2024
 
 * libgettextpo library:
   - This library is now multithread-safe.
+  - The function 'po_message_set_format' now supports resetting a format string
+    mark.
 
 Version 0.22.5 - February 2024
 
